2016-12-06      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.1
        * anonymine_solver.py (solver_loop): Found a potential bug:
            `fail` was not set to False if a solvable cell was found.
        * anonymine_solver.py: Removed commented out profiling code.

2016-12-05      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.0
        * NEWS: gitgub.com does not resolve; converted a reference to BUGS
        * INSTALL: MUST run `make` before `make install`; mentioned bug with
            symlinks when DESTDIR is set.
        * Makefile.static (uninstall), INSTALL: Delete the highscores file.

2016-12-04      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.19
        * HACKING: Mention that only versions 0.1.15 and above are in Github.
        * INSTALL: Many small changes.
        * NEWS: Added NEWS for 0.4.  Will bump the version to 0.4.0 if there's
            nothing else to do on 0.3.z.
    0.3.18
        *: Got rid of BUGS.  BUG descriptions have been moved into comments
            at relevant locations in the source and to Github issues.
        * anonymine_engine.py: Removed weird FIXME from play_game:
            self.start = time.time()
    0.3.17
        *: enginecfg.default -> enginecfg.fallback to avoid confusion.
        * mkenginecfg: renamed enginecfg.default -> enginecfg.fallback;
            removed possibly outdated TODO
        * mkdist: Various changes.
        * HACKING: Fixed the TODO for mkdist. Updated about enginecfg stuff.
        * ChangeLog [0.2.26]: Fixed typo.

2016-12-03      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.16
        * README:
            - Split "Tested platforms" up into "Tested platforms" and
              "Software & hardware requirements".
            - Added some HW requirements and reformatted the SW requirements.
            - Added link to the anonymine-windows Github repo.
            - Some tiny changes
            - Added "text based" as a synonym for "curses mode".