@@ -3,6 +3,9 @@
         * anonymine_solver.py (solver_loop): Found a potential bug:
             `fail` was not set to False if a solvable cell was found.
         * anonymine_solver.py: Removed commented out profiling code.
+        * anonymine_solver.py: Tracked down the PyPy bug to the
+            number_neighbours function.  Uncomment the print and
+            run pypybug() in test.py.
 
 2016-12-05      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.4.0
